--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   max-width: 600px;
   width: 100%;
   height: 350px;
-  background: url(/images/background.png);
+  background: url(images/background.png);
   background-position: center;
   background-size: cover;
 }
